# glitz

./: Makefile.am  configure.in
doc/reference/: Makefile.am  glitz-docs.xml  glitz-sections.txt  glitz-undeclared.txt  glitz-undocumented.txt  version.xml.in
doc/reference/tmpl/: glitz-agl.sgml  glitz-buffer.sgml  glitz-context.sgml  glitz-drawable.sgml  glitz-drawing.sgml  glitz-egl.sgml  glitz-formats.sgml  glitz-formats.sgml.sgml  glitz-glx.sgml  glitz-pixels.sgml  glitz-surface.sgml  glitz-texture.sgml  glitz-types.sgml  glitz-unused.sgml  glitz-wgl.sgml
examples/: Makefile.am
examples/cairogears/: Makefile.am  cairogears-agl.c  cairogears-cgl.m  cairogears-glx.c  cairogears.h  common.c  comp.c  cube.c  fdface.c  fdface.h  fdhand.c  fdhand.h  fdlogo.c  fdlogo.h  gears.c  gears.h  opengl.c  read_png.c  read_png.h  shadow.c  text.c  trap.c
examples/glitzinfo/: Makefile.am  glitzinfo.c
examples/renderer-test/: Makefile.am  args.c  glitz.c  glitz_agl.c  glitz_cgl.m  glitz_common.h  glitz_egl.c  glitz_glx.c  images.h  pixman.c  png.c  rects.h  rendertest.c  rendertest.h  traps.h
src/: Makefile.am  glitz.h  glitz.pc.in  glitz_context.c  glitz_drawable.c  glitz_format.c  glitz_framebuffer.c  glitz_gl.h  glitz_surface.c  glitz_texture.c  glitzint.h
src/agl/: Makefile.am  glitz-agl.pc.in  glitz_agl_context.c  glitz_agl_extension.c  glitz_agl_format.c  glitz_aglint.h
src/cgl/: Makefile.am  glitz-cgl.h  glitz-cgl.man  glitz-cgl.pc.in  glitz_cgl_context.m  glitz_cgl_drawable.m  glitz_cgl_extension.m  glitz_cgl_format.m  glitz_cgl_info.m  glitz_cgl_pbuffer.m  glitz_cglint.h
src/egl/: Makefile.am  glitz-egl.pc.in  glitz_egl_context.c
src/glx/: Makefile.am  glitz-glx.h  glitz-glx.pc.in  glitz_glx_context.c  glitz_glx_drawable.c  glitz_glx_extension.c  glitz_glx_format.c  glitz_glx_info.c  glitz_glx_pixmap.c  glitz_glxext.h  glitz_glxint.h
src/wgl/: Makefile.am  glitz-wgl.pc.in  glitz_wgl_context.c  glitz_wgl_format.c
